php-src/ext/standard/tests/assert/assert02.exp
Notice: Undefined variable: a in %sassert02.php(%d) : assert code on line 1

Warning: assert(): Assertion "$a" failed in %sassert02.php on line %d
Failure evaluating code: 
aa=sd+as+safsafasfasafsaf

Warning: assert(): Assertion "0" failed in %sassert02.php on line %d

Fatal error: Uncaught ParseError: syntax error, unexpected '=', expecting ';' in %s(%d) : assert code:1
Stack trace:
#0 %s(%d): assert('aa=sd+as+safsaf...')
#1 {main}

Next Error: Failure evaluating code: 
aa=sd+as+safsafasfasafsaf in %s:%d
Stack trace:
#0 %s(%d): assert('aa=sd+as+safsaf...')
#1 {main}
  thrown in %s on line %d